cloud/w10/lab/gatekeeper/templates/01-no-latest-tag-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowedtags
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowedTags
      validation:
        openAPIV3Schema:
          properties:
            tags:
              type: array
              items: { type: string }
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowedtags
      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        tag := split(container.image, ":")[1]
        tag == input.parameters.tags[_]
        msg := sprintf("Image tag bị cấm: %v dùng tag '%v'", [container.image, tag])
      }
