cloud/w10/lab/gatekeeper/templates/03-no-root-user-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockrootuser
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sBlockRootUser
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sblockrootuser
      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        container.securityContext.runAsUser == 0
        msg := sprintf("Container '%v' không được chạy runAsUser: 0 (root)", [container.name])
      }
