cloud/w10/lab/gatekeeper/templates/04-no-host-network-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockhostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sBlockHostNetwork
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sblockhostnetwork
      violation[{"msg": msg}] {
        input.review.object.spec.template.spec.hostNetwork == true
        msg := "hostNetwork: true bị cấm"
      }
